--- a/widget/src/androidMain/res/layout/widget_progressbar_dark.xml
+++ b/widget/src/androidMain/res/layout/widget_progressbar_dark.xml
@@ -9,5 +9,5 @@
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:indeterminate="true"
-        android:indeterminateTint="#72C0EC" />
+        android:indeterminateTint="#FFFFFF" />
 </FrameLayout>
