--- a/widget/src/androidMain/res/layout/widget_progressbar_light.xml
+++ b/widget/src/androidMain/res/layout/widget_progressbar_light.xml
@@ -9,5 +9,5 @@
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:indeterminate="true"
-        android:indeterminateTint="#0F84F9" />
+        android:indeterminateTint="#000000" />
 </FrameLayout>
